--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello world!</title>
+	<title>Hello world! I'm Viki</title>
 </head>
 <body>
 <h1>Hello world!</h1>
