--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello world!</title>
-</head>
+<head><title>first exercise</title></head>
 <body>
-<h1>Hello world! This is viki</h1>
+	<h3>WEB DEVELOPMENT BASICS</h3>
+	<form action="first_code.php" method="post">
+		<label>Enter username</label>
+		<input type="text" name="user">
+		<label>Enter User id</label>
+		<input type="text" name="id">
+		<input type="submit" name="Login">
+	</form>
 </body>
 </html>
