--- a/site/index.html
+++ b/site/index.html
@@ -4,9 +4,9 @@
 <body>
 	<h3>WEB DEVELOPMENT BASICS</h3>
 	<form action="first_code.php" method="post">
-		<label>Enter uname</label>
+		<label>Enter user name</label>
 		<input type="text" name="user">
-		<label>Enter Uid</label>
+		<label>Enter User id</label>
 		<input type="text" name="id">
 		<input type="submit" name="Login">
 	</form>
