--- a/site/index.html
+++ b/site/index.html
@@ -44,7 +44,7 @@ tr:nth-child(even) {
 
 
 
-<h2>HTML Table</h2>
+<h2>Vehicle data log</h2>
 
 
 
@@ -52,11 +52,12 @@ tr:nth-child(even) {
 
   <tr>
 
-    <th>Company</th>
+    <th>Vehicle no.</th>
 
-    <th>Contact</th>
+    <th>Latitude</th>
 
-    <th>Country</th>
+    <th>Longtitude</th>
+    
 
   </tr>
 
