--- a/site/index.html
+++ b/site/index.html
@@ -18,42 +18,12 @@ tr:nth-child(even) {
 </style>
 </head>
 <body>
-<h2>HTML Table</h2>
+<h2>Vehicle data log</h2>
 <table>
   <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
-  </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-  <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
-  </tr>
-  <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
+    <th>Vehicle no.</th>
+    <th>latitude</th>
+    <th>longtitude</th>
   </tr>
   <tr>
     <td>TN37DC4817</td>
@@ -99,6 +69,41 @@ tr:nth-child(even) {
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+  </tr>
+  <tr>
+    <td>TN37DC4817</td>
+    <td>11.1852</td>
+    <td>76.9615</td>
+  </tr>
+  <tr>
+    <td>TN37DC4817</td>
+    <td>11.1852</td>
+    <td>76.9615</td>
+  </tr>
+  <tr>
+    <td>TN37DC4817</td>
+    <td>11.1852</td>
+    <td>76.9615</td>
+  </tr>
+  <tr>
+    <td>TN37DC4817</td>
+    <td>11.1852</td>
+    <td>76.9615</td>
+  </tr>
+  <tr>
+    <td>TN37DC4817</td>
+    <td>11.1852</td>
+    <td>76.9615</td>
+  </tr>
+  <tr>
+    <td>TN37DC4817</td>
+    <td>11.1852</td>
+    <td>76.9615</td>
+  </tr>
+  <tr>
+    <td>TN37DC4817</td>
+    <td>11.1852</td>
+    <td>76.9615</td>
   </tr>
 </table>
 </body>
