--- a/site/index.html
+++ b/site/index.html
@@ -24,86 +24,120 @@ tr:nth-child(even) {
     <th>Vehicle no.</th>
     <th>latitude</th>
     <th>longtitude</th>
+    <th>speed</th>
+    <th>RPM</th>
   </tr>
   <tr>
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>847.0 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>851.0 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>1516.0 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>2019.0 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>956.5 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>856.5 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>838.5 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>841.5 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
     <td>11.1851</td>
     <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>830.0 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
-    <td>11.1852</td>
-    <td>76.9615</td>
+    <td>11.1851</td>
+    <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>833.5 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
-    <td>11.1852</td>
-    <td>76.9615</td>
+    <td>11.1851</td>
+    <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>839.5 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
-    <td>11.1852</td>
-    <td>76.9615</td>
+    <td>11.1851</td>
+    <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>842.0 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
-    <td>11.1852</td>
-    <td>76.9615</td>
+    <td>11.1851</td>
+    <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>834.0 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
-    <td>11.1852</td>
-    <td>76.9615</td>
+    <td>11.1851</td>
+    <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>1222.5 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
-    <td>11.1852</td>
-    <td>76.9615</td>
+    <td>11.1851</td>
+    <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>908.0 revolutions_per_minute</td>
   </tr>
   <tr>
     <td>TN37DC4817</td>
-    <td>11.1852</td>
-    <td>76.9615</td>
+    <td>11.1851</td>
+    <td>76.9616</td>
+    <td>0.0 kph</td>
+    <td>825.5 revolutions_per_minute</td>
   </tr>
 </table>
 </body>
